--- a/AdministrationUsers/src/main/resources/application.yml
+++ b/AdministrationUsers/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
   datasource:
-    url: jdbc:postgresql://localhost:5432/SaaS
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=saas_user
     username: postgres
     password: Sherlock!gmt!2022
     driver-class-name: org.postgresql.Driver
