--- a/AdministrationUsers/src/main/resources/application.yml
+++ b/AdministrationUsers/src/main/resources/application.yml
@@ -1,10 +1,7 @@
 spring:
-  security:
-    user:
-      name: dev
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=saas_user
     username: postgres
